--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 language: c
 
 env:
+  - ZABBIX_VERSION=4.2.5
   - ZABBIX_VERSION=3.4.8
   - ZABBIX_VERSION=3.2.11
   - ZABBIX_VERSION=3.0.16
